# DevelopmentCode

51MCU/AD_DA/: delay.h  main.c  main.hex
51MCU/AD_DA/libRich/: libRichKM.h
51MCU/AD_DA2/: LCD1602.c  XPT2046.c  XPT2046.h  delay.c  main.c  main.hex
51MCU/AT24C02/: AT24C02.c  AT24C02.h  I2C.c  I2C.h  Key.c  Key.h  delay.h  main.c  main.hex
51MCU/DS1302/: DS1302.c  DS1302.h  main.c  main.hex
51MCU/LED呼吸灯/: main.c
51MCU/lcd1602调试/: main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/lcd1602调试/Listings/: LCD1602.lst  main.lst  oled.lst  project.m51
51MCU/lcd1602调试/Objects/: project.build_log.htm  project.hex  project.lnp
51MCU/led动画/: MatrixLED.c  MatrixLED.h  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/led动画/Listings/: MatrixLED.lst  delay.lst  main.lst
51MCU/led动画/Objects/: project.build_log.htm
51MCU/led显示动画/: MatrixLED.c  MatrixLED.h  delay.h  main.c
51MCU/led点阵/: main.c  main.hex
51MCU/led点阵/libRich/: libRichForced.h
51MCU/串口/: Project.uvgui.c'z'w'x'k'n  Project.uvopt  Project.uvproj  main.c
51MCU/串口/Listings/: Project.m51  main.lst
51MCU/串口/Objects/: Project  Project.build_log.htm  Project.hex
51MCU/二进制计数器/: MatrixKey.c  MatrixKey.h  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/二进制计数器/Listings/: MatrixKey.lst  delay.lst  main.lst  project.m51
51MCU/二进制计数器/Objects/: project  project.build_log.htm  project.hex  project.lnp
51MCU/创客校赛/: LCD1602.c  LCD1602.h  MatrixKey.c  MatrixKey.h  calculator.h  compute.c  compute.h  garbage.c  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/创客校赛/Listings/: LCD1602.lst  MatrixKey.lst  compute.lst  delay.lst  garbage.lst  main.lst
51MCU/创客校赛/Objects/: LCD1602.__i  compute.__i  garbage.__i  project.build_log.htm
51MCU/动态数码管显示/: main.c  project.uvgui.c'z'w'x'k'n
51MCU/动态数码管显示/Listings/: main.lst  project.m51
51MCU/动态数码管显示/Objects/: project  project.build_log.htm  project.hex
51MCU/按键控制led流水灯/: Key.c  delay.c  main.c  main.hex  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/按键控制led流水灯/.eide/: eide.yml
51MCU/按键控制led流水灯/Listings/: Key.lst  delay.lst  main.lst  project.m51
51MCU/按键控制led流水灯/Objects/: project  project.build_log.htm  project.hex  project.lnp
51MCU/模块化编程的展示/: delay.c  delay.h  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/模块化编程的展示/Listings/: delay.lst  main.lst  project.m51
51MCU/模块化编程的展示/Objects/: project  project.build_log.htm  project.lnp
51MCU/流水灯/: main.c  main.hex  project.uvgui.c'z'w'x'k'n  project.uvproj
51MCU/流水灯/Listings/: main.lst  project.m51
51MCU/流水灯/Objects/: project.build_log.htm  project.hex
51MCU/测试/: main.c  project.uvgui.c'z'w'x'k'n  project.uvproj
51MCU/测试/Listings/: main.lst  project.m51
51MCU/测试/Objects/: project  project.build_log.htm  project.hex
51MCU/点亮led/: STARTUP.LST  main.LST  main.c  project.plg  project.uvgui.c'z'w'x'k'n  project.uvproj  project_uvopt.bak
51MCU/点亮led/Listings/: main.lst  project.m51
51MCU/点亮led/Objects/: project  project.build_log.htm  project.hex
51MCU/点阵屏/: main.c  project.uvgui.c'z'w'x'k'n  project.uvproj
51MCU/点阵屏/Listings/: main.lst  project.m51
51MCU/点阵屏/Objects/: project.build_log.htm  project.hex
51MCU/电协校赛/: 新建 Microsoft Word 文档.docx
51MCU/电协校赛/简易时钟菜单/: LCD1602.c  OLED_Font.h  a  delay.c  globalvars.c  globalvars.h  handlemode.c  handlemode.h  modeswitch.c  modeswitch.h  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj  see_lcd1602.c  show.c  timer.c  timer.h  timeupdate.c
51MCU/电协校赛/简易时钟菜单 (2)/: LCD1602.c  LCD1602.h  delay.h  globalvars.h  handlemode.c  key.c  key.h  main.c  modeswitch.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj  see_lcd1602.h  show.c  show.h  timer.c  timer.h  timeupdate.c  timeupdate.h
51MCU/直流电机调速/: Nixie.c  Timer0.c  main.c  main.hex
51MCU/矩阵键盘/: delay.h  main.c  project.uvgui.c'z'w'x'k'n
51MCU/矩阵键盘/Listings/: LCD1602.lst  MatrixKey.lst  delay.lst  main.lst  project.m51
51MCU/矩阵键盘/Objects/: project  project.build_log.htm  project.hex
51MCU/矩阵键盘密码锁/: MatrixKey.c  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj
51MCU/矩阵键盘密码锁/Listings/: MatrixKey.lst  main.lst  project.m51
51MCU/矩阵键盘密码锁/Objects/: project  project.build_log.htm  project.hex
51MCU/红外遥控/: IR.c  IR.h  Timer0.c  Timer0.h  int0.c  main.c  main.hex
51MCU/红外遥控/libRich/: libRichNixietube.h
51MCU/计算器/: calculator.c  calculator.h  display.c  display.h  globalvars.c  globalvars.h  keyboard.c  keyboard.h  lcd1602.c  lcd1602.h  main.c  project.uvgui.c'z'w'x'k'n  project.uvopt  project.uvproj  timer.c
51MCU/计算器/Listings/: calculator.lst  delay.lst  display.lst  globalvars.lst  keyboard.lst  lcd1602.lst  main.lst  project.m51  timer.lst
51MCU/计算器/Objects/: calculator.__i  display.__i  project  (+5 more)
51MCU/静态数码管显示/: main.c  project.uvgui.c'z'w'x'k'n
STM32MCU/STDLproject/stm32_spl_template/cmake/stm32cubemx/: CMakeLists.txt
c_language/数据结构/: kc.c  后缀表达式.c  递归.c
cpp_language/: 1.5.2.cpp  初步认识.cpp
python/shiyan/: 2.py
器件资料/YX55693-新款+寻迹模块+-190520/: Arduino参考程序.docx  说明.docx
(+1095 files in other folders)
